# telebot

./: .gitignore  README.md  main.py  pyproject.toml
app/: database.py  handlers.py  keyboards.py  make_data.py
data/: Combo.xlsx  combo.db
